--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hyperf",
   "version": "0.1.0",
+  "homepage": "https://www.hyperf.io",
   "private": true,
   "dependencies": {
     "antd": "^3.14.1",
@@ -16,9 +17,11 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired docs",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +35,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "gh-pages": "^2.0.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react-app-rewired": "^2.1.3"
